# realtime-fraud-detection-mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mlflow.Dockerfile  models.dvc  prefect.yaml  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: ci.yml
data/: processed.dvc
gx/: .gitignore  great_expectations.yml
gx/expectations/: processed_data_suite.json  raw_data_suite.json
gx/validation_definitions/: processed_data_suite_validation.json  raw_data_suite_pipeline_validation.json  raw_data_validation.json
k8s/base/: configmap.yaml  deployment.yaml  fraud-api-deployment.yaml  fraud-data-pvc.yaml  grafana-config.yaml  grafana-deployment.yaml  grafana-service.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-secret.yaml  minio-service.yaml  minio.yaml  mlflow-deployment.yaml  mlflow-service.yaml  mlflow.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  postgres.yaml  prefect-pvc.yaml  prefect-server-deployment.yaml  prefect-service.yaml  prefect-worker-deployment.yaml  prefect-worker-rbac.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  prometheus-service.yaml  service.yaml
notebooks/: 00_data_preparation.ipynb  01_exploration.ipynb  02_features.ipynb  03_model_training.ipynb
src/: __init__.py
src/api/: app.py
src/config/: config.yaml  prometheus.yml
src/data/: __init__.py  generation.py
src/features/: __init__.py  encoders.py  engineering.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/monitoring/: __init__.py  drift_config.py  drift_detection.py  drift_simulation.py  metrics.py  run_drift_report.py
src/pipelines/: __init__.py  training_flow.py  training_pipeline.py
src/utils/: __init__.py  config.py  exceptions.py  logger.py
src/validation/: __init__.py  expectations.py  setup_gx.py  validate_data.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_integration.py  (+2 more)
(+12 files in other folders)
