[project]
name = "realtime-fraud-detection-mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "feast>=0.57.0",
    "imbalanced-learn>=0.14.0",
    "mlflow>=3.6.0",
    "prefect>=3.6.2",
    "seaborn>=0.13.2",
    "shap==0.45.0",
    "tree>=0.2.4",
    "xgboost==2.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
