[project]
name = "realtime-fraud-detection-mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.64.2",
    "fastapi>=0.121.2",
    "feast>=0.57.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.3",
    "mlflow>=3.6.0",
    "prefect>=3.6.2",
    "pytest>=9.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "uvicorn>=0.34.0",
    "xgboost==2.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
